--- a/report/tex/Abstract.tex
+++ b/report/tex/Abstract.tex
@@ -1,3 +1,5 @@
 \begin{abstract} 
-Some Abstract
+In this report, we review the paper The All Convolutional Net by Jost Tobias Springenberg, Alexey Dosovitskiy, Thomas Brox, and Martin Riedmiller.\\
+Instead of building convolutional neural nets with the conventional principle, the authors experiment with models that are increasingly homogeneous. They find that both the max-pooling layer and the fullying connected layer -- which have been important parts of the CNN structures -- can be replaced by other convolutional layers. This new structure with almost purely convolutional layer is said to perform as well as the state-of-the-art CNN architectures if not better in some cases.\\
+\textbf{TODO:} We find that...
 \end{abstract} 
