--- a/report/tex/Review.tex
+++ b/report/tex/Review.tex
@@ -26,3 +26,7 @@ The author challenges the conventional CNN structure by introducing a number of 
 According to the paper a pooling layer is equivalent to perform a feature-wise convolution by replacing the activation function with a $p$-norm. Thus, they question why a pooling layer is needed. Based on this questioning
 they state the hypothesis that pooling is only important in order to reduce the dimensionality. Assuming this hypothesis is true, a pooling layer can be replaced by
 a convolutional layer with an increased stride.
+
+Additionally, by using convolutional layers with a filter size smaller than 5, the authors reduce the number of parameters in a network.
+Moreover, they argument that fully connected layers are not necessary since units in the last convolutional layer in the network cover a sufficient portion of the image to be able to recognize it.
+% Please proofread what I've written above
