--- a/report/report.tex
+++ b/report/report.tex
@@ -49,7 +49,7 @@ Columbia University\\
 Juan Pablo Colomer\\
 Columbia University\\
 116th St \& Broadway, New York, NY, USA\\
-{\tt\small jpc2192@columbia.edu}
+{\tt\small j.p.colomer@columbia.edu}
 }
 \maketitle
 
