--- a/report/tex/Experiments.tex
+++ b/report/tex/Experiments.tex
@@ -1,2 +1,111 @@
 \section{Experiments}
-some words
+
+\subsection{Architectures}
+% Check these architectures
+\begin{table}
+  \centering
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    Model A & Strided-CNN-A & ConvPool-CNN-A & ALL-CNN-A \\
+    \hline
+    \multicolumn{4}{|c|}{Input $32\times32$ RGB Images} \\
+    \hline
+    $5\times5$ conv. 96 ReLU & $5\times5$ conv. 96 ReLU stride 2 &  $5\times5$ conv. 96 ReLU & $5\times5$ conv. 96 ReLU \\
+    & & $3\times3$ conv. 96 ReLU & \\
+    \hline
+    $3\times3$ max-pooling stride 2 & & $3\times3$ max-pooling stride 2& $3\times3$ conv. 96 ReLU stride 2 \\
+    \hline
+    $5\times5$ conv. 192 ReLU & $5\times5$ conv. 192 ReLU stride 2 &  $5\times5$ conv. 192 ReLU & $5\times5$ conv. 192 ReLU \\
+    & & $3\times3$ conv. 192 ReLU & \\
+    \hline
+    $3\times3$ max-pooling stride 2 & & $3\times3$ max-pooling stride 2& $3\times3$ conv. 96 ReLU stride 2 \\
+    \hline
+    \multicolumn{4}{|c|}{$3\times3$ conv. 192 ReLU} \\
+    \multicolumn{4}{|c|}{$1\times1$ conv. 192 ReLU} \\
+    \multicolumn{4}{|c|}{$1\times1$ conv. 10 ReLU} \\
+    \multicolumn{4}{|c|}{global average pooling layer} \\
+    \multicolumn{4}{|c|}{10-way softmax} \\
+  \end{tabular}
+  \caption{Architectures for Model A}
+\end{table}
+
+\begin{table}
+  \centering
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    Model B & Strided-CNN-B & ConvPool-CNN-B & ALL-CNN-B \\
+    \hline
+    \multicolumn{4}{|c|}{Input $32\times32$ RGB Images} \\
+    \hline
+    $5\times5$ conv. 96 ReLU & $5\times5$ conv. 96 ReLU &  $5\times5$ conv. 96 ReLU & $5\times5$ conv. 96 ReLU \\
+    $1\times1$ conv. 96 ReLU & $1\times1$ conv. 96 ReLU stride 2 &  $1\times1$ conv. 96 ReLU & $1\times1$ conv. 96 ReLU \\
+    & & $3\times3$ conv. 96 ReLU & \\
+    \hline
+    $3\times3$ max-pooling stride 2 & & $3\times3$ max-pooling stride 2& $3\times3$ conv. 96 ReLU stride 2 \\
+    \hline
+    $5\times5$ conv. 192 ReLU & $5\times5$ conv. 192 ReLU &  $5\times5$ conv. 192 ReLU & $5\times5$ conv. 192 ReLU \\
+    $1\times1$ conv. 192 ReLU & $1\times1$ conv. 192 ReLU stride 2 &  $1\times1$ conv. 192 ReLU & $1\times1$ conv. 192 ReLU \\
+    & & $3\times3$ conv. 192 ReLU & \\
+    \hline
+    $3\times3$ max-pooling stride 2 & & $3\times3$ max-pooling stride 2& $3\times3$ conv. 96 ReLU stride 2 \\
+    \hline
+    \multicolumn{4}{|c|}{$3\times3$ conv. 192 ReLU} \\
+    \multicolumn{4}{|c|}{$1\times1$ conv. 192 ReLU} \\
+    \multicolumn{4}{|c|}{$1\times1$ conv. 10 ReLU} \\
+    \multicolumn{4}{|c|}{global average pooling layer} \\
+    \multicolumn{4}{|c|}{10-way softmax} \\
+  \end{tabular}
+  \caption{Architectures for Model B}
+\end{table}
+
+\begin{table}
+  \centering
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    Model C & Strided-CNN-C & ConvPool-CNN-C & ALL-CNN-C \\
+    \hline
+    \multicolumn{4}{|c|}{Input $32\times32$ RGB Images} \\
+    \hline
+    $3\times3$ conv. 96 ReLU & $3\times3$ conv. 96 ReLU &  $3\times3$ conv. 96 ReLU & $3\times3$ conv. 96 ReLU \\
+    $3\times3$ conv. 96 ReLU & $3\times3$ conv. 96 ReLU stride 2 &  $3\times3$ conv. 96 ReLU & $3\times3$ conv. 96 ReLU \\
+    & & $3\times3$ conv. 96 ReLU & \\
+    \hline
+    $3\times3$ max-pooling stride 2 & & $3\times3$ max-pooling stride 2& $3\times3$ conv. 96 ReLU stride 2 \\
+    \hline
+    $3\times3$ conv. 192 ReLU & $3\times3$ conv. 192 ReLU &  $3\times3$ conv. 192 ReLU & $3\times3$ conv. 192 ReLU \\
+    $3\times3$ conv. 192 ReLU & $3\times3$ conv. 192 ReLU stride 2 &  $3\times3$ conv. 192 ReLU & $3\times3$ conv. 192 ReLU \\
+    & & $3\times3$ conv. 192 ReLU & \\
+    \hline
+    $3\times3$ max-pooling stride 2 & & $3\times3$ max-pooling stride 2& $3\times3$ conv. 96 ReLU stride 2 \\
+    \hline
+    \multicolumn{4}{|c|}{$3\times3$ conv. 192 ReLU} \\
+    \multicolumn{4}{|c|}{$1\times1$ conv. 192 ReLU} \\
+    \multicolumn{4}{|c|}{$1\times1$ conv. 10 ReLU} \\
+    \multicolumn{4}{|c|}{global average pooling layer} \\
+    \multicolumn{4}{|c|}{10-way softmax} \\
+  \end{tabular}
+  \caption{Architectures for Model C}
+\end{table}
+
+\begin{table}
+  \centering
+  \begin{tabular}{|c c c|}
+    Model & Error (\%) & # parameters \\
+    \hline
+    Model A & 12.47\% & \approx 0.9 M \\
+    Strided-CNN-A & 13.46\% & \approx 0.9 M \\
+    ConvPool-CNN-A & 10.21\% & \approx 1.28 M \\
+    ALL-CNN-A & 10.30\% & \approx 1.28 M \\
+    \hline
+    Model B & 10.20\% & \approx 1 M \\
+    Strided-CNN-B & 10.98\% & \approx 1 M \\
+    ConvPool-CNN-B & 9.33\% & \approx 1.35 M \\
+    ALL-CNN-B & 9.10\% & \approx 1.35 M \\
+    \hline
+    Model C & 9.74\% & \approx 1.3 M \\
+    Strided-CNN-C & 10.19\% & \approx 1.3 M \\
+    ConvPool-CNN-C & 9.31\% & \approx 1.4 M \\
+    ALL-CNN-C & 9.08\% & \approx 1.4 M \\
+  \end{tabular}
+  \caption{Original classification Error on CIFAR-10}
+\end{table}
