Load values in notebook

--- a/src/all_cnn.ipynb
+++ b/src/all_cnn.ipynb
@@ -9,28 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/theano/tensor/signal/downsample.py:6: UserWarning: downsample module has been moved to the theano.tensor.signal.pool module.\n",
-      "  \"downsample module has been moved to the theano.tensor.signal.pool module.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib\n",
     "import pylab\n",
-    "from train import *\n",
+    "from train import load_model_values\n",
     "from model import *\n",
     "from all_cnn import *\n",
     "from conv_pool import *\n",
     "from strided_cnn import *\n",
+    "import gzip\n",
+    "import cPickle as pickle\n",
+    "import numpy as np\n",
     "%matplotlib inline"
    ]
   },
@@ -306,6 +300,51 @@
    "source": [
     "train(all_cnn_c, learning_rate=0.05)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def load_model_values(filename):\n",
+    "    with gzip.open(filename, 'rb') as f:\n",
+    "        values = pickle.load(f)\n",
+    "        return values\n",
+    "    \n",
+    "layers = load_model_values('../all_cnn_c_best.pklz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
